tdf#93839 - Encourage vdevs to pick up new GL Contexts when they go invalid.

Change-Id: I21726d0dd052fdc87e8dd36ff7122518325f6313