vcl/inc/openglgdiimpl.hxx
@@ -153,6 +153,8 @@ public:
 
     virtual void Init() SAL_OVERRIDE;
 
+    virtual void DeInit() SAL_OVERRIDE;
+
     virtual void freeResources() SAL_OVERRIDE;
 
     const vcl::Region& getClipRegion() const;
