vcl/source/opengl/OpenGLContext.cxx
@@ -1165,6 +1165,9 @@ void OpenGLContext::reset()
 
     OpenGLZone aZone;
 
+    // don't reset a context in the middle of stack frames rendering to it
+    assert( mnPainting == 0 );
+
     // reset the clip region
     maClipRegion.SetEmpty();
 
